--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4.7</version>
 	</dependency>
-
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>23.0</version>
+	</dependency>
   </dependencies>
 </project>
