--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
 	    <artifactId>guava</artifactId>
 	    <version>23.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>redis.clients</groupId>
+	    <artifactId>jedis</artifactId>
+	    <version>3.5.1</version>
+	</dependency>
   </dependencies>
 </project>
